fix: fixed the click of objects with lower z-index

--- a/src/index.css
+++ b/src/index.css
@@ -50,8 +50,13 @@
   font-weight: 900;
   font-style: normal;
 }
+* {
+  pointer-events: none !important;
+}
 
-/* Apply the font to all text by default */
+.clickable {
+  pointer-events: auto !important;
+}
 @layer base {
   html {
     font-family: "MPLUSRounded1c", system-ui, sans-serif;
@@ -130,7 +135,4 @@
 
 .scrollbar-custom::-webkit-scrollbar-thumb:hover {
   background-color: rgba(255, 255, 255, 0.5);
-}
-:root {
-  --gameroomfloor-translate: -30%;
 }
